[package]
name = "gm-sm2"
version = "0.9.0"
edition = "2021"

description = "A Rust Implementation of China's Standards of Encryption Algorithms SM2"
authors = ["evanyang1120@163.com"]
homepage = "https://github.com/CrayfishGo/gm-rs.git"
license = "MIT"
keywords = ["sm2"]
categories = ["cryptography"]
readme = "README.md"
documentation = "https://docs.rs/gm-rs/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.0.0"
rand = "0.8.4"
lazy_static = "1.4.0"
base64 = "0.21.0"
hex = "0.4"
num-traits = "0.2.14"
num-bigint = { version = "0.8.1", features = ["i128", "u64_digit"], default-features = false, package = "num-bigint-dig" }
num-integer = "0.1.44"
gm-sm3 = { path = "../gm-sm3" }


[dev-dependencies]
criterion = "0.4"
hex-literal = "0.3"

[[bench]]
name = "sm2"
harness = false