[package]
name = "gm-sm2"
version = "0.12.2"
edition = "2021"

description = "A Rust Implementation of China's Standards of Encryption Algorithms SM2"
authors = ["evanyang1120@163.com"]
homepage = "https://github.com/CrayfishGo/gm-rs.git"
license = "MIT"
keywords = ["sm2"]
categories = ["cryptography"]
readme = "README.md"
documentation = "https://docs.rs/gm-sm2/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.0.0"
rand = "0.8.4"
lazy_static = "1.4.0"
base64 = "0.21.0"
hex = "0.4"
num-traits = "0.2.14"
num-integer = "0.1.44"
gm-sm3 = { version = "0.10.0", path = "../gm-sm3" }
num-bigint = "0.4.4"
yasna = { version = "0.5.2", features = ["num-bigint"] }


[dev-dependencies]
criterion = "0.4"
hex-literal = "0.3"

[dependencies.pkcs8]
version = "0.10.2"
features = ["alloc", "pem"]
default-features = false

[dependencies.sec1]
version = "0.7.3"
features = [
    "subtle",
    "zeroize",
]
optional = true


[features]
default = ["sec1"]

[[bench]]
name = "sm2"
harness = false
