[package]
name = "gm-sm3"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "A Rust Implementation of China's Standards of Encryption Algorithms SM3"
authors = ["evanyang1120@163.com"]
homepage = "https://github.com/CrayfishGo/gm-rs.git"
license = "MIT"
keywords = ["sm3"]
categories = ["cryptography"]
readme = "README.md"
documentation = "https://docs.rs/gm-sm3/"

[dependencies]
