[package]
name = "gm-sm4"
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "A Rust Implementation of China's Standards of Encryption Algorithms SM4"
authors = ["evanyang1120@163.com"]
homepage = "https://github.com/CrayfishGo/gm-rs.git"
license = "MIT"
keywords = ["sm4"]
categories = ["cryptography"]
readme = "README.md"
documentation = "https://docs.rs/gm-sm4/"

[dependencies]
hex = "0.4"

[dev-dependencies]
criterion = "0.4"
hex-literal = "0.3"