[package]
name = "gm-sm9"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.0.0"
rand = "0.8.4"
lazy_static = "1.4.0"
base64 = "0.21.0"
hex = "0.4"
num-traits = "0.2.14"
num-integer = "0.1.44"
gm-sm3 = { version = "0.10.0", path = "../gm-sm3" }
num-bigint = "0.4.4"
yasna = { version = "0.5.2", features = ["num-bigint"] }